# hush-brain

./: .gitignore  LICENSE  README.md  pyproject.toml  start.bat
docs/: GUIDE.md  TUTORIAL.md
docs/specs/: 2026-07-07-hush-brain-design.md
graphify-out/: manifest.json
src/hush_brain/: __init__.py  agents.py  brain.py  bus.py  cli.py  db.py  hooks.py  orchestrator.py  providers.py  server.py
src/hush_brain/static/: app.js  index.html  style.css
tests/: test_api.py  test_brain.py  test_orchestrator.py
